# buckethead

./: .gitignore  .trivyignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  sonar-project.properties  vite.config.js
.github/workflows/: release.yml
docs/: todo.md
scripts/: release.sh
src/: App.jsx  app.css  bindings.ts  bridge.js  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  s3_client.rs
src-tauri/src/commands/: auth.rs  buckets.rs  mod.rs  objects.rs
src/components/: BucketList.jsx  FilePreview.jsx  ObjectBrowser.jsx  ProfileSelector.jsx
src/i18n/: index.js
src/i18n/locales/: en.json  ja.json  vi.json
