[package]
name = "aws-thathoo"
version = "1.2.0"
description = "AWS Thathoo — S3 browser for macOS"
authors = []
edition = "2021"

[lib]
name = "aws_thathoo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aws-thathoo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# AWS
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"

# Async + utils
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
