[package]
name = "buckethead"
version = "0.1.0"
description = "Buckethead — All HEAD, no PUT. S3 browser for macOS."
authors = []
edition = "2021"

[lib]
name = "buckethead_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "buckethead"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# AWS
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async + utils
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"

# Specta — type-safe IPC bindings
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
